@@ -26,21 +26,26 @@ define( function( require ) {
    * @constructor
    */
   function PHValueNode( pHProperty ) {
+
     var thisNode = this;
     Node.call( thisNode );
 
-    var labelNode = new Text( pHString,
-      { fill: 'white', font: new PhetFont( { size: 28, weight: 'bold' } ) } );
-
+    // pH value
     var valueNode = new Text( Util.toFixed( PHScaleConstants.PH_RANGE.max, PHScaleConstants.PH_METER_DECIMAL_PLACES ),
       { fill: 'black', font: new PhetFont( 28 ) } );
 
+    // rectangle that the value is displayed in
     var valueXMargin = 8;
     var valueYMargin = 5;
     var cornerRadius = 12;
     var valueRectangle = new Rectangle( 0, 0, valueNode.width + ( 2 * valueXMargin ), valueNode.height + ( 2 * valueYMargin ), cornerRadius, cornerRadius,
       { fill: 'white' } );
 
+    // label above the value
+    var labelNode = new Text( pHString,
+      { fill: 'white', font: new PhetFont( { size: 28, weight: 'bold' } ) } );
+
+    // background
     var backgroundXMargin = 14;
     var backgroundYMargin = 10;
     var backgroundYSpacing = 6;
@@ -49,8 +54,17 @@ define( function( require ) {
     this.backgroundRectangle = new Rectangle( 0, 0, backgroundWidth, backgroundHeight, cornerRadius, cornerRadius,
       { fill: 'rgb(135,25,75)' } );
 
+    // highlight around the background, effectively stroked inside the background shape
+    var highlightLineWidth = 4;
+    var outerHighlight = new Rectangle( highlightLineWidth / 2, highlightLineWidth / 2, backgroundWidth - highlightLineWidth, backgroundHeight - highlightLineWidth, cornerRadius, cornerRadius,
+      { stroke: 'black', lineWidth: highlightLineWidth } );
+    var innerHighlight = new Rectangle( highlightLineWidth, highlightLineWidth, backgroundWidth - (2 * highlightLineWidth), backgroundHeight - (2 * highlightLineWidth), cornerRadius, cornerRadius,
+      { stroke: 'white', lineWidth: highlightLineWidth } );
+    var highlight = new Node( { children: [ innerHighlight, outerHighlight ], visible: false } );
+
     // rendering order
     thisNode.addChild( this.backgroundRectangle );
+    thisNode.addChild( highlight );
     thisNode.addChild( valueRectangle );
     thisNode.addChild( labelNode );
     thisNode.addChild( valueNode );
@@ -68,10 +82,12 @@ define( function( require ) {
       if ( pH === null ) {
         valueNode.text = stringNoValue;
         valueNode.centerX = valueRectangle.centerX; // center justified
+        highlight.visible = false;
       }
       else {
         valueNode.text = Util.toFixed( pH, PHScaleConstants.PH_METER_DECIMAL_PLACES );
         valueNode.right = valueRectangle.right - valueXMargin; // right justified
+        highlight.visible = ( parseFloat( valueNode.text ) === 7 );
       }
     } );
   }
